KKC-633 add order in product list